--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,9 +13,13 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_trivia"
+            android:icon="@drawable/trivia_icon_round"
+            android:title="@string/android_trivia" />
+        <item
+            android:id="@+id/nav_dice_roller"
+            android:icon="@drawable/dice_1"
+            android:title="@string/dice_roller" />
 
     </group>
 
