--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -14,8 +14,8 @@
             android:id="@+id/action_nav_home_to_nav_home_second"
             app:destination="@id/nav_home_second" />
         <action
-            android:id="@+id/action_nav_home_to_settings"
-            app:destination="@id/settings" />
+            android:id="@+id/action_nav_home_to_action_settings"
+            app:destination="@id/action_settings" />
     </fragment>
     <fragment
         android:id="@+id/nav_home_second"
@@ -38,10 +38,10 @@
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.android.androidmarki.ui.home.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_trivia"
+        android:name="com.example.android.androidmarki.ui.home.trivia.title.TriviaTitleFragment"
+        android:label="@string/android_trivia"
+        tools:layout="@layout/fragment_trivia_title" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -56,7 +56,8 @@
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
-        android:id="@+id/settings"
+        android:id="@+id/action_settings"
+        tools:layout="@xml/settings"
         android:name="com.example.android.androidmarki.ui.home.settings.SettingsFragment"
         android:label="Settings" />
     <activity
@@ -64,5 +65,11 @@
         tools:layout="@layout/activity_main"
         android:name="com.example.android.androidmarki.ui.main.MainActivity"
         android:label="MainActivity" />
+    <fragment
+        android:id="@+id/nav_dice_roller"
+        android:name="com.example.android.androidmarki.ui.home.dice.DiceFragment"
+        android:label="DiceFragment"
+        tools:layout="@layout/fragment_dice"
+        />
 
 </navigation>
