--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:gravity="center"
-        android:drawable="@drawable/ic_android_black"/>
+        android:drawable="@drawable/side_nav_bar"/>
+    <item
+        android:drawable="@drawable/splash_icon"/>
+
 </layer-list>
