--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -13,7 +13,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/side_nav_bar"
         tools:context=".ui.home.dice.DiceFragment">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -24,7 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:src="@{viewModel.diceUIData.drawableResource}"
+            app:src="@{viewModel.diceDrawableResource}"
             tools:src="@drawable/dice_1" />
 
         <com.google.android.material.button.MaterialButton
@@ -32,10 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             app:cornerRadius="8dp"
             android:onClick="@{()->viewModel.rollDice()}"
-            app:backgroundTint="@color/colorWhite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dice_image"
