--- a/app/src/main/res/layout/fragment_trivia_game.xml
+++ b/app/src/main/res/layout/fragment_trivia_game.xml
@@ -17,18 +17,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.navigation.GameFragment">
+    tools:context=".ui.home.trivia.game.TriviaGameFragment">
 
     <data>
 
         <variable
-            name="game"
-            type="com.example.android.navigation.GameFragment" />
+            name="viewModel"
+            type="com.example.android.androidmarki.ui.home.trivia.game.TriviaGameViewModel" />
     </data>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/questionImage"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/image_header_height"
@@ -52,7 +53,7 @@
                 app:layout_constraintVertical_chainStyle="packed"
                 app:srcCompat="@drawable/android_category_simple" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/questionText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -61,7 +62,7 @@
                 android:layout_marginEnd="@dimen/question_horizontal_margin"
                 android:layout_marginBottom="@dimen/vertical_margin"
                 android:fontFamily="sans-serif"
-                android:text="@{game.currentQuestion.text}"
+                android:text="@{viewModel.currentQuestion.text}"
                 android:textSize="@dimen/question_text_size"
                 android:textStyle="bold"
                 android:typeface="normal"
@@ -78,57 +79,59 @@
                 android:layout_marginTop="@dimen/vertical_margin"
                 android:layout_marginEnd="@dimen/question_horizontal_margin"
                 android:animateLayoutChanges="true"
+                android:checkedButton="@={viewModel.checkedId}"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/questionText">
 
-                <RadioButton
+                <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/firstAnswerRadioButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/question_vertical_margin"
-                    android:checked="true"
-                    android:text="@{game.answers[0]}"
+                    android:text="@{viewModel.answers[0]}"
                     android:textSize="@dimen/answer_text_size"
                     tools:text="Blue" />
 
-                <RadioButton
+                <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/secondAnswerRadioButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/question_vertical_margin"
-                    android:text="@{game.answers[1]}"
+                    android:text="@{viewModel.answers[1]}"
                     android:textSize="@dimen/answer_text_size"
                     tools:text="Green" />
 
-                <RadioButton
+                <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/thirdAnswerRadioButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/question_vertical_margin"
-                    android:text="@{game.answers[2]}"
+                    android:text="@{viewModel.answers[2]}"
                     android:textSize="@dimen/answer_text_size"
                     tools:text="Yellow" />
 
-                <RadioButton
+                <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/fourthAnswerRadioButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{game.answers[3]}"
+                    android:text="@{viewModel.answers[3]}"
                     android:textSize="@dimen/answer_text_size"
                     tools:text="Red" />
             </RadioGroup>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/submitButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/question_horizontal_margin"
                 android:layout_marginTop="@dimen/vertical_margin"
                 android:layout_marginEnd="@dimen/question_horizontal_margin"
+                android:onClick="@{()->viewModel.submit()}"
                 android:text="@string/submit_button"
-                android:textSize="@dimen/button_text_size"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup" />
