--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -12,14 +12,18 @@
             type="com.example.android.androidmarki.ui.main.verify.VerifyViewModel" />
 
         <variable
-            name="clickListener"
-            type="com.example.android.androidmarki.ui.main.MainListener.Verify" />
+            name="verify"
+            type="com.example.android.androidmarki.ui.main.verify.VerificationFragment" />
     </data>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#68EFEFEF"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -30,7 +34,7 @@
             android:id="@+id/verify_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{viewModel.verifyResult.loading == false ? View.VISIBLE : View.INVISIBLE}"
+            android:visibility="@{viewModel.verifyResult.loading ? View.INVISIBLE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +45,7 @@
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:onClick="@{()->clickListener.onBack()}"
+                android:onClick="@{()->verify.requireActivity().onBackPressed()}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:icon="@drawable/ic_ab_back_material" />
@@ -108,7 +112,7 @@
                 android:hint="@string/code"
                 app:error="@{viewModel.verifyUIData.codeError}"
                 app:errorEnabled="true"
-                android:visibility="@{viewModel.verifyUIData.isCode() == false ? View.GONE : View.VISIBLE}"
+                android:visibility="@{viewModel.verifyUIData.isCode()  ?  View.VISIBLE: View.GONE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/verify_phone_layout"
@@ -134,7 +138,7 @@
                 android:id="@+id/verify_code_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{()->clickListener.onSendCode()}"
+                android:onClick="@{()->verify.clickListener.onSendCode()}"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:text="@{viewModel.verifyUIData.isCode() == false ? @string/send_code : @string/resend_code}"
                 app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +146,7 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/verify"
+                android:id="@+id/verify_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_arrow_right_black_24dp"
@@ -167,4 +171,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
