--- a/app/src/main/res/layout/fragment_trivia_game_won.xml
+++ b/app/src/main/res/layout/fragment_trivia_game_won.xml
@@ -46,8 +46,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{()->gameWon.clickListener.onReplay()}"
-                android:paddingStart="@dimen/button_padding"
-                android:paddingEnd="@dimen/button_padding"
                 android:text="@string/next_match"
                 android:layout_marginBottom="64dp"
                 android:textColor="@color/youWinDark"
@@ -64,7 +62,7 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/game_over_height"
                 android:layout_marginStart="@dimen/horizontal_margin"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="@dimen/horizontal_margin"
                 android:layout_marginBottom="@dimen/vertical_margin"
                 android:scaleType="fitCenter"
@@ -73,7 +71,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/you_win" />
+                app:srcCompat="@drawable/trivia_you_win" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
