--- a/app/src/main/res/layout/fragment_trivia_title.xml
+++ b/app/src/main/res/layout/fragment_trivia_title.xml
@@ -39,6 +39,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/android_trivia" />
+            app:srcCompat="@drawable/trivia_android_trivia" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
