--- a/app/src/main/res/menu/trivia_winner_menu.xml
+++ b/app/src/main/res/menu/trivia_winner_menu.xml
@@ -20,9 +20,7 @@
 
     <item
         android:id="@+id/share"
-        android:enabled="true"
-        android:icon="@drawable/share"
+        android:icon="@android:drawable/ic_menu_share"
         android:title="@string/share"
-        android:visible="true"
         app:showAsAction="ifRoom" />
 </menu>
