--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">128dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--Trivia-->
     <dimen name="vertical_margin">16dp</dimen>
     <dimen name="horizontal_margin">8dp</dimen>
     <dimen name="button_padding">16dp</dimen>
@@ -15,4 +17,12 @@
     <dimen name="question_text_size">30sp</dimen>
     <dimen name="image_header_height">192dp</dimen>
     <dimen name="game_over_height">350dp</dimen>
+
+    <!-- Desert Pusher-->
+    <dimen name="default_spacing">16dp</dimen>
+    <dimen name="button_width">150dp</dimen>
+    <dimen name="button_height">150dp</dimen>
+    <dimen name="medium_text_size">20sp</dimen>
+    <dimen name="large_text_size">33sp</dimen>
+    <dimen name="corner_radius">4dp</dimen>
 </resources>
