--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,8 @@
                 android:id="@+id/nav_view"
                 style="@style/Widget.Design.NavigationView"
                 android:layout_width="wrap_content"
+                android:animateLayoutChanges="true"
+                android:scrollbars="none"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 app:headerLayout="@layout/nav_header_home"
