--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -148,14 +148,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="36dp"
                     android:layout_marginEnd="24dp"
+                    android:layout_marginTop="12dp"
                     android:onClick="@{()->viewModel.login()}"
                     android:text="@string/login"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
                     app:backgroundTint="@color/google_green"
                     app:cornerRadius="20dp"
+                    app:layout_constraintVertical_chainStyle="spread"
+                    app:layout_constraintBottom_toTopOf="@+id/connect"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/forgot" />
@@ -164,44 +166,48 @@
                     android:id="@+id/connect"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     android:text="@string/or_connect_using"
+                    app:layout_constraintBottom_toTopOf="@+id/login_google"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/login_button" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/login_google"
+                    style="@style/Widget.MaterialComponents.Button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="48dp"
-                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="48dp"
+                    android:layout_marginBottom="32dp"
+                    android:layout_marginTop="8dp"
                     android:onClick="@{()->login.clickListener.onSignInWithGoogle()}"
                     android:text="@string/google"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:textColor="@color/google_green"
-                    app:strokeColor="@color/google_green"
                     app:backgroundTint="@color/colorWhite"
                     app:cornerRadius="8dp"
                     app:icon="@drawable/googleg_standard_color_18"
                     app:iconTint="@null"
+                    app:layout_constraintBottom_toTopOf="@+id/sign"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/connect" />
+                    app:layout_constraintTop_toBottomOf="@id/connect"
+                    app:strokeColor="@color/google_green"
+                    app:strokeWidth="1dp" />
 
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="48dp"
+                    android:layout_marginBottom="8dp"
                     android:text="@string/don_t_have_an_account"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/login_google" />
+                    app:layout_constraintEnd_toStartOf="@id/up"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/up"
@@ -211,9 +217,10 @@
                     android:onClick="@{()->login.clickListener.onSignUp()}"
                     android:text="@string/sign_up"
                     android:textColor="@color/google_green"
-                    app:layout_constraintBottom_toBottomOf="@id/sign"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBaseline_toBaselineOf="@id/sign"
                     app:layout_constraintStart_toEndOf="@id/sign"
-                    app:layout_constraintTop_toTopOf="@id/sign" />
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
