--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -57,9 +57,10 @@
                     android:id="@+id/signUp_welcome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="136dp"
                     android:text="@string/let_s_get_started"
+                    app:layout_constraintVertical_chainStyle="packed"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    app:layout_constraintBottom_toTopOf="@+id/signUp_info"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +73,7 @@
                     android:gravity="center_horizontal"
                     android:hint="@string/create_an_account_for_mark_i"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    app:layout_constraintBottom_toTopOf="@+id/signUp_username_layout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/signUp_welcome" />
@@ -83,11 +85,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="24dp"
                     android:hint="@string/prompt_email"
                     app:error="@{viewModel.signUpUIData.usernameError}"
                     app:errorEnabled="true"
+                    app:layout_constraintBottom_toTopOf="@+id/signUp_password_layout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/signUp_info"
@@ -114,6 +117,7 @@
                     android:hint="@string/prompt_password"
                     app:error="@{viewModel.signUpUIData.passwordError}"
                     app:errorEnabled="true"
+                    app:layout_constraintBottom_toTopOf="@+id/signUp_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/signUp_username_layout"
@@ -141,40 +145,45 @@
                     android:layout_width="0dp"
                     android:layout_height="44dp"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="48dp"
                     android:onClick="@{()->viewModel.signUp()}"
                     android:text="@string/create"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
                     app:backgroundTint="@color/google_green"
                     app:cornerRadius="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/sign"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/signUp_password_layout" />
+                    app:layout_constraintTop_toBottomOf="@id/signUp_password_layout"
+                    />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/sign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="48dp"
                     android:layout_marginBottom="8dp"
+                    app:layout_constraintHorizontal_bias="0.5"
                     android:text="@string/already_have_an_account"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/in"
+                    app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/up"
+                    android:id="@+id/in"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:onClick="@{()->signUp.requireActivity().onBackPressed()}"
                     android:text="@string/login"
                     android:textColor="@color/google_green"
-                    app:layout_constraintBottom_toBottomOf="@id/sign"
+                    app:layout_constraintBaseline_toBaselineOf="@id/sign"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/sign"
-                    app:layout_constraintTop_toTopOf="@id/sign" />
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ProgressBar
