--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -15,11 +15,12 @@
             name="verify"
             type="com.example.android.androidmarki.ui.main.verify.VerificationFragment" />
     </data>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         android:fillViewport="true">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,9 +55,10 @@
                 android:id="@+id/verify_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="136dp"
+                app:layout_constraintVertical_chainStyle="packed"
                 android:text="@string/verify_phone_number"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                app:layout_constraintBottom_toTopOf="@+id/verify_info"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -66,9 +68,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
                 android:gravity="center_horizontal"
                 android:hint="@string/enter_phone_number_and_continue_with_code_received"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                app:layout_constraintBottom_toTopOf="@+id/verify_phone_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/verify_welcome" />
@@ -79,11 +83,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
                 android:layout_marginEnd="24dp"
                 android:hint="@string/phone_number"
                 app:error="@{viewModel.verifyUIData.phoneNumberError}"
                 app:errorEnabled="true"
+                app:layout_constraintBottom_toTopOf="@+id/verify_code_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/verify_info"
@@ -110,9 +114,10 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:hint="@string/code"
+                android:visibility="@{viewModel.verifyUIData.isCode()  ?  View.VISIBLE: View.GONE}"
                 app:error="@{viewModel.verifyUIData.codeError}"
                 app:errorEnabled="true"
-                android:visibility="@{viewModel.verifyUIData.isCode()  ?  View.VISIBLE: View.GONE}"
+                app:layout_constraintBottom_toTopOf="@+id/verify_code_send"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/verify_phone_layout"
@@ -126,8 +131,8 @@
                     android:layout_height="wrap_content"
                     android:imeActionLabel="Verify"
                     android:inputType="number"
-                    android:selectAllOnFocus="true"
                     android:maxLength="6"
+                    android:selectAllOnFocus="true"
                     android:text="@={viewModel.verifyUIData.code}"
                     android:textColor="@color/colorPrimaryDark"
                     android:textColorHint="@color/colorPrimaryDark"
@@ -136,14 +141,16 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/verify_code_send"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{()->verify.clickListener.onSendCode()}"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:text="@{viewModel.verifyUIData.isCode() == false ? @string/send_code : @string/resend_code}"
+                android:text="@{viewModel.verifyUIData.isCode() ? @string/resend_code : @string/send_code}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/verify_code_layout"
-                app:layout_constraintEnd_toEndOf="parent" />
+                android:layout_marginBottom="64dp"
+                app:layout_constraintTop_toBottomOf="@id/verify_code_layout" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/verify_button"
@@ -162,7 +169,7 @@
             android:id="@+id/verify_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="@{viewModel.verifyResult.isLoading() == false ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.verifyResult.isLoading() ?  View.VISIBLE :View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
