--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_dice_roller"
             android:icon="@drawable/dice_roller_dice_1"
             android:title="@string/dice_roller" />
+        <item
+            android:id="@+id/nav_guess_it"
+            android:icon="@drawable/guess_it_ic_guess_it_round"
+            android:title="@string/guess_it" />
 
     </group>
 
