--- a/app/src/main/res/layout/fragment_reset.xml
+++ b/app/src/main/res/layout/fragment_reset.xml
@@ -35,7 +35,7 @@
             android:id="@+id/reset_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{viewModel.resetResult.loading  ? View.INVISIBLE : View.VISIBLE}"
+            android:visibility="@{viewModel.resetResult.loading  ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
