--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,21 +9,28 @@
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_dessert_pusher"
-            android:icon="@drawable/dessert_pusher_ic_dessert_pusher_round"
-            android:title="@string/dessert_pusher" />
+            android:id="@+id/nav_dice_roller"
+            android:icon="@drawable/dice_roller_dice_1"
+            android:title="@string/dice_roller" />
         <item
             android:id="@+id/nav_trivia"
             android:icon="@drawable/trivia_icon_round"
             android:title="@string/android_trivia" />
         <item
-            android:id="@+id/nav_dice_roller"
-            android:icon="@drawable/dice_roller_dice_1"
-            android:title="@string/dice_roller" />
+            android:id="@+id/nav_dessert_pusher"
+            android:icon="@drawable/dessert_pusher_ic_round"
+            android:title="@string/dessert_pusher" />
+
         <item
             android:id="@+id/nav_guess_it"
-            android:icon="@drawable/guess_it_ic_guess_it_round"
+            android:icon="@drawable/guess_it_ic_round"
             android:title="@string/guess_it" />
+        <item
+            android:id="@+id/nav_sleep_tracker"
+            android:icon="@drawable/sleep_tracker_round"
+            android:title="@string/sleep_tracker" />
+
+
 
     </group>
 
