--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -70,5 +70,8 @@
     <include
         android:id="@+id/nav_guess_it"
         app:graph="@navigation/guess_it_nav_graph" />
+    <include     android:id="@+id/nav_sleep_tracker"
+
+        app:graph="@navigation/sleep_tracker_nav_graph" />
 
 </navigation>
