Home Activity - DiceFragment - TriviaGameFragment - Desert Pusher Fragment - Guess It Fragment - SleepTracker Fragment with Recycler View - mars real estate - auth/main with coroutines - devbyte Viewer

--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -61,5 +61,6 @@
     <include
         app:graph="@navigation/sleep_tracker_nav_graph" />
     <include app:graph="@navigation/mars_real_estate_nav_graph" />
+    <include app:graph="@navigation/devbyte_viewer_nav_graph" />
 
 </navigation>
