--- a/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
+++ b/app/src/main/res/layout/fragment_mars_real_estate_overview.xml
@@ -50,8 +50,9 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/status_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
