--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -15,168 +15,161 @@
             name="verify"
             type="com.example.android.androidmarki.ui.main.verify.VerificationFragment" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:scrollbars="none">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".ui.main.verify.VerificationFragment">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/verify_layout"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{viewModel.verifyResult.loading ? View.GONE : View.VISIBLE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/verify_back"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:onClick="@{()->verify.requireActivity().onBackPressed()}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:icon="@drawable/ic_ab_back_material" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/verify_welcome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintVertical_chainStyle="packed"
-                android:text="@string/verify_phone_number"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                app:layout_constraintBottom_toTopOf="@+id/verify_info"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/verify_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="12dp"
-                android:gravity="center_horizontal"
-                android:hint="@string/enter_phone_number_and_continue_with_code_received"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintBottom_toTopOf="@+id/verify_phone_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/verify_welcome" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/verify_phone_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:hint="@string/phone_number"
-                app:error="@{viewModel.verifyUIData.phoneNumberError}"
-                app:errorEnabled="true"
-                app:layout_constraintBottom_toTopOf="@+id/verify_code_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/verify_info"
-                app:startIconDrawable="@drawable/ic_smartphone_black_24dp"
-                app:startIconTint="@color/colorPrimaryDark">
-
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/verify_phone_no"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="phone"
-                    android:maxLength="14"
-                    android:selectAllOnFocus="true"
-                    android:text="@={viewModel.verifyUIData.phoneNumber}"
-                    android:textColor="@color/colorPrimaryDark" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/verify_code_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:hint="@string/code"
-                android:visibility="@{viewModel.verifyUIData.isCode()  ?  View.VISIBLE: View.GONE}"
-                app:error="@{viewModel.verifyUIData.codeError}"
-                app:errorEnabled="true"
-                app:layout_constraintBottom_toTopOf="@+id/verify_code_send"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/verify_phone_layout"
-                app:startIconDrawable="@drawable/ic_lock_lockdown"
-                app:startIconTint="@color/colorPrimaryDark">
-
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/verify_code"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:imeActionLabel="Verify"
-                    android:inputType="number"
-                    android:maxLength="6"
-                    android:selectAllOnFocus="true"
-                    android:text="@={viewModel.verifyUIData.code}"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    app:done="@{()->viewModel.verify()}" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/verify_code_send"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->verify.clickListener.onSendCode()}"
-                android:text="@{viewModel.verifyUIData.isCode() ? @string/resend_code : @string/send_code}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintTop_toBottomOf="@id/verify_code_layout" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/verify_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon="@drawable/ic_arrow_right_black_24dp"
-                android:onClick="@{()->viewModel.verify()}"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:text="@string/next"
-                app:iconGravity="end"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ProgressBar
-            android:id="@+id/verify_loading"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="@{viewModel.verifyResult.isLoading() ?  View.VISIBLE :View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".ui.main.verify.VerificationFragment">
+
+            <ProgressBar
+                android:id="@+id/verify_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="@{viewModel.verifyResult.isLoading() ?  View.VISIBLE :View.GONE}" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/verify_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="@{viewModel.verifyResult.loading ? View.GONE : View.VISIBLE}">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/verify_back"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="48dp"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{()->verify.requireActivity().onBackPressed()}"
+                    app:icon="@drawable/ic_ab_back_material"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/verify_welcome"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/verify_phone_number"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    app:layout_constraintBottom_toTopOf="@+id/verify_info"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/verify_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="12dp"
+                    android:gravity="center_horizontal"
+                    android:hint="@string/enter_phone_number_and_continue_with_code_received"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    app:layout_constraintBottom_toTopOf="@+id/verify_phone_layout"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/verify_welcome" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/verify_phone_layout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:hint="@string/phone_number"
+                    app:error="@{viewModel.verifyUIData.phoneNumberError}"
+                    app:errorEnabled="true"
+                    app:layout_constraintBottom_toTopOf="@+id/verify_code_layout"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/verify_info"
+                    app:startIconDrawable="@drawable/ic_smartphone_black_24dp"
+                    app:startIconTint="@color/colorPrimaryDark">
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/verify_phone_no"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="phone"
+                        android:maxLength="14"
+                        android:selectAllOnFocus="true"
+                        android:text="@={viewModel.verifyUIData.phoneNumber}"
+                        android:textColor="@color/colorPrimaryDark" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/verify_code_layout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:hint="@string/code"
+                    android:visibility="@{viewModel.verifyUIData.isCode()  ?  View.VISIBLE: View.GONE}"
+                    app:error="@{viewModel.verifyUIData.codeError}"
+                    app:errorEnabled="true"
+                    app:layout_constraintBottom_toTopOf="@+id/verify_code_send"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/verify_phone_layout"
+                    app:startIconDrawable="@drawable/ic_lock_lockdown"
+                    app:startIconTint="@color/colorPrimaryDark">
+
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/verify_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeActionLabel="Verify"
+                        android:inputType="number"
+                        android:maxLength="6"
+                        android:selectAllOnFocus="true"
+                        android:text="@={viewModel.verifyUIData.code}"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        app:done="@{()->viewModel.verify()}" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/verify_code_send"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="64dp"
+                    android:onClick="@{()->verify.clickListener.onSendCode()}"
+                    android:text="@{viewModel.verifyUIData.isCode() ? @string/resend_code : @string/send_code}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/verify_code_layout" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/verify_button"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{()->viewModel.verify()}"
+                    android:text="@string/next"
+                    app:icon="@drawable/ic_arrow_right_black_24dp"
+                    app:iconGravity="end"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </FrameLayout>
     </ScrollView>
 </layout>
