--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -34,7 +34,10 @@
             android:id="@+id/nav_mars_real_estate"
             android:icon="@drawable/mars_real_estate_ic"
             android:title="@string/mars_real_estate" />
-
+        <item
+            android:id="@+id/nav_devbyte_viewer"
+            android:icon="@drawable/ic_play_circle_outline_black_48dp"
+            android:title="@string/devByte_viewer_name" />
 
     </group>
 
